# EocLib_krnln

./: .clang-format  .gitattributes  .gitignore  LICENSE  README.md
SuperTemplateForKrnln/: SuperTemplateForKrnln.sln
SuperTemplateForKrnln/SuperTemplateForKrnln/: SuperTemplate.cs  SuperTemplateForKrnln.csproj
SuperTemplateForKrnln/SuperTemplateForKrnln/Properties/: AssemblyInfo.cs
krnln/: CMakeLists.txt  config.cmake  info.json  info.yml
krnln/src/e/lib/krnln/: ArrayUtils.h  BinUtils.cpp  BinUtils.h  ConsoleUtils.cpp  ConsoleUtils.h  Converter.cpp  Converter.h  DateTimeUtils.cpp  DateTimeUtils.h  DebugUtils.cpp  DebugUtils.h  EnvironmentInfo.cpp  EnvironmentInfo.h  FindAllHelper.h  GeneralUtils.h  GlobalConstant.h  LogicUtils.h  MathUtils.h  MemoryUtils.h  NetworkUtils.cpp  NetworkUtils.h  RandomUtils.cpp  RandomUtils.h  SystemHelper.cpp  SystemHelper.h  TextUtils.cpp  TextUtils.h  ThreadUtils.cpp  ThreadUtils.h  public.cpp  public.h
krnln/src/e/lib/krnln/Operator/: Operator.h
krnln/src/e/lib/krnln/com/: COMObject.cpp  COMObject.h
krnln/src/e/lib/krnln/file/: BaseFile.cpp  BaseFile.h  File.cpp  File.h  FileUtils.cpp  FileUtils.h  MemoryFile.cpp  MemoryFile.h
krnln/src/itoa/: branchlut2.cpp  branchlut2.h
krnln/test/: CMakeLists.txt  TestForArrayUtils.cpp  TestForBinUtils.cpp  TestForConverter.cpp  TestForDateTimeUtils.cpp  TestForLogicUtils.cpp  TestForMathUtils.cpp  TestForMemoryUtils.cpp  TestForNetworkUtils.cpp  TestForTextUtils.cpp  TestMain.cpp  TextForFileUtils.cpp
