cmake_minimum_required(VERSION 3.8)

if(NOT DEFINED EOC_HOME)
	set(EOC_HOME $ENV{EOC_HOME})
endif()
include(${EOC_HOME}/EocBuildHelper.cmake)

project(EocKrnln)
option(EocKrnln_BUILD_TESTS "Build tests for EocKrnln." OFF)
aux_source_directory(${EocKrnln_SOURCE_DIR}/src/itoa EocKrnln_DIR_SRCS_ITOA_MOUDLED)
aux_source_directory(${EocKrnln_SOURCE_DIR}/src/e/lib/krnln EocKrnln_DIR_SRCS_MAIN_MOUDLED)
aux_source_directory(${EocKrnln_SOURCE_DIR}/src/e/lib/krnln/file EocKrnln_DIR_SRCS_FILE_MODULE)
aux_source_directory(${EocKrnln_SOURCE_DIR}/src/e/lib/krnln/com EocKrnln_DIR_SRCS_COM_MODULE)
add_library(EocKrnln ${EocKrnln_DIR_SRCS_ITOA_MOUDLED} ${EocKrnln_DIR_SRCS_MAIN_MOUDLED} ${EocKrnln_DIR_SRCS_FILE_MODULE} ${EocKrnln_DIR_SRCS_COM_MODULE})
set_property(TARGET EocKrnln PROPERTY CXX_STANDARD 17)
set_property(TARGET EocKrnln PROPERTY CXX_STANDARD_REQUIRED ON)

target_link_eoc_lib(EocKrnln system EocSystem)
target_include_directories(EocKrnln PUBLIC ${CMAKE_CURRENT_LIST_DIR}/src)
target_link_libraries(EocKrnln PUBLIC Shlwapi.lib Rpcrt4.lib)

if(EocKrnln_BUILD_TESTS)
	enable_testing()
	add_subdirectory(test)
endif()