include(${EOC_HOME}/EocBuildHelper.cmake)	
find_package(Catch2 REQUIRED)
aux_source_directory(. EocKrnln_DIR_TESTS)
add_executable(EocKrnln_Test ${EocKrnln_DIR_TESTS})
set_property(TARGET EocKrnln_Test PROPERTY CXX_STANDARD 17)
set_property(TARGET EocKrnln_Test PROPERTY CXX_STANDARD_REQUIRED ON)
target_link_libraries(EocKrnln_Test EocKrnln Catch2::Catch2)
include(CTest)
include(Catch)
catch_discover_tests(EocKrnln_Test)